--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && exit 1",
+      "pre-commit": "lint-staged",
       "pre-push": "npm test"
     }
   }
