--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && exit 1",
-      "pre-push": "npm test && exit 1"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
     }
   }
 }
